--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:ital,wght@0,100;0,600;0,700;0,800;1,200;1,400;1,900&display=swap');
+
 *{
   margin: 0;
   padding: 0;
@@ -45,3 +47,28 @@
   font-size: 20px;
 }
 
+
+.navbar{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 10vh;
+  box-shadow: rgba(50,50,93,0.23) 0 30px 30px -20px;
+}
+.nav-links{
+  display: flex;
+  justify-content:flex-end ;
+  width:75%;
+
+}
+li{
+  list-style-type: none;
+  text-decoration: none;
+}
+.container{
+  max-width: 90%;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
