style -filter comp add - category routes bug -carousel

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,10 @@ body::-webkit-scrollbar{
   padding: 0;
   box-sizing: border-box;
 }
+.carousel-item{
+  pointer-events: none
+  ;
+}
 
 
 .product-container {
