--- a/src/index.css
+++ b/src/index.css
@@ -9,74 +9,6 @@ body::-webkit-scrollbar{
   padding: 0;
   box-sizing: border-box;
 }
-.carousel-item{
-  pointer-events: none
-  ;
-}
-
-
-.product-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-.product-card {
-  display: inline-block;
-  width: 40%;
-  border: none;
-  margin: 10px;
-  text-align: center;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  padding: 20px;
-  background-color: #fff;
-  border-radius: 4px;
-  transition: box-shadow 0.3s ease;
-}
-
-.product-image {
-  width: 100%;
-  height: 70%;
-  margin-bottom: 10px;
-}
-
-.brand-name {
-  font-size: 18px;
-  margin-bottom: 5px;
-}
-
-.price {
-  font-size: 16px;
-  font-weight: bold;
-  margin-bottom: 5px;
-}
-
-.review {
-  color: gold;
-  font-size: 20px;
-}
-
-
-.navbar{
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 10vh;
-  box-shadow: rgba(50,50,93,0.23) 0 30px 30px -20px;
-}
-.nav-links{
-  display: flex;
-  justify-content:flex-end ;
-  width:75%;
-
-}
-li{
-  list-style-type: none;
-  text-decoration: none;
-}
-.container{
-  max-width: 90%;
-  margin: auto;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+body{
+  scroll-behavior: smooth;
 }
